@@ -81,7 +81,7 @@ public class SessionFile
 	public Integer getCarat()
 	{
 		if (carat == null)
-			return new Integer(0);
+			return Integer.valueOf(0);
 		return carat;
 	}
 	
